--- a/config.yml
+++ b/config.yml
@@ -10,7 +10,7 @@ policies:
   - name: MemoizationPolicy
   - name: KerasPolicy
   - name: MappingPolicy
-  - name: "FallbackPolicy"
+  - name: FallbackPolicy
     nlu_threshold: 0.3
     ambiguity_threshold: 0.1
     core_threshold: 0.3
